<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context = "edu.bloomu.wpg31519.geofood.MainActivity">
    <item
            android:title="@string/search"
            android:onClick="search"
            android:icon="@drawable/search_icon"
            app:showAsAction="ifRoom"
            />
    <item
            android:title="@string/options"
            android:icon="@drawable/menu"
            app:showAsAction="ifRoom"

            >
        <menu app:showAsAction="ifRoom">
            <item
                android:title="@string/current_location"
                android:onClick="getCurrentLocation"/>
            <item
                android:title="@string/about_geofood"
                android:onClick="aboutGeoFood"/>
            <item
                android:title="@string/reset_map"
                android:onClick="reset"
                    />
            <item
                android:title="@string/saved_restaurants"
                android:onClick="savedRestaurants"
                android:id = "@+id/save_restaurants"
                />
            <item
                android:title="@string/logout"
                android:onClick="logout"/>



        </menu>




    </item>

</menu>