<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >

    <ImageView
        android:id="@+id/geofood_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appGreen"
        android:src="@drawable/geofood_logo"
        app:layout_constraintBottom_toTopOf="@id/information_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="1dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_following_information"
            android:id="@+id/information_title"
            app:layout_constraintTop_toBottomOf="@id/geofood_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/first_name"
            android:textSize="20sp"
            android:textColor="@color/appBlue"
            android:fontFamily="sans-serif-black"


            />
        <EditText

            android:id="@+id/first_name"
            android:layout_width="200dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/information_title"
            app:layout_constraintBottom_toTopOf="@id/last_name"
            android:background="@drawable/edit_text_boarder"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <EditText
            android:inputType="text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/last_name"
            android:hint="@string/last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            app:layout_constraintBottom_toTopOf="@id/register_email"
            android:background="@drawable/edit_text_boarder"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id = "@+id/register_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/edit_text_boarder"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_password"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/register_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintBottom_toTopOf="@id/confirm_password"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintBottom_toTopOf="@id/register"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        
        />
    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="OnClick" />






</androidx.constraintlayout.widget.ConstraintLayout>